prevent drag on mobile

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,10 @@
+body {
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  user-select:none;
+}
 #container {
   display: flex;
   align-items: center;
